--- a/packages/Popup/tsconfig.json
+++ b/packages/Popup/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "jsx": "react",
       "esModuleInterop": true,
       "forceConsistentCasingInFileNames": true,
       "isolatedModules": true,
@@ -11,4 +12,3 @@
     },
     "exclude": ["node_modules"]
   }
-  
